fix: auto scroll of chat works on mobiles now

--- a/src/components/Chat/ChatInput/ChatInput.css
+++ b/src/components/Chat/ChatInput/ChatInput.css
@@ -1,6 +1,7 @@
 .form {
   display: flex;
   border-top: 2px solid #d3d3d3;
+  margin-top: 5px;
 }
 
 .input {
