--- a/src/components/Chat/MessageList/MessageList.css
+++ b/src/components/Chat/MessageList/MessageList.css
@@ -1,12 +1,12 @@
 /* This class is the scroll to bottom chat box */
 .css-13azwyo.messages {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  max-height: 20vh;
+  /* padding-top: 5px; */
+  /* margin-bottom: 5px; */
+  height: 22.5vh;
 }
 
 .messages {
-  padding: 15px 0;
+  padding: 0 0;
   overflow: auto;
   flex: auto;
 }
